--- a/src/views/orders.ejs
+++ b/src/views/orders.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>Список заказов</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -33,9 +33,17 @@
         </nav>
     </header>
     <main class="container mt-4">
-        <%= body %>
-        <h1>Добро пожаловать в Мой Магазин</h1>
-        <p>Здесь вы найдете множество интересных товаров!</p>
+        <!-- Содержимое списка заказов -->
+        <h1>Список заказов</h1>
+        <% if (orders.length > 0) { %>
+            <ul>
+                <% orders.forEach(function(order) { %>
+                    <li><%= order.name %> - <%= order.amount %></li>
+                <% }); %>
+            </ul>
+        <% } else { %>
+            <p>У вас пока нет заказов.</p>
+        <% } %>
     </main>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
