--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,16 +28,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Личный кабинет</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cart">Корзина</a>
+                    </li>
                 </ul>
             </div>
         </nav>
     </header>
     <main class="container mt-4">
+        <!-- Основное содержимое страницы -->
         <%= body %>
-        <h1>Добро пожаловать в Мой Магазин</h1>
-        <p>Здесь вы найдете множество интересных товаров!</p>
     </main>
-    <!-- Bootstrap JS and dependencies -->
+    <!-- Bootstrap JS и зависимости -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
