--- a/src/views/orders.ejs
+++ b/src/views/orders.ejs
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Личный кабинет</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cart">Корзина</a>
+                    </li>
                 </ul>
             </div>
         </nav>
