исправил ошибки и сделал админку

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -36,13 +36,12 @@
         </nav>
     </header>
     <main class="container mt-4">
-        
         <!-- Содержимое личного кабинета -->
         <h1>Личный кабинет</h1>
         <p>Добро пожаловать, <%= username %>!</p>
 
         <!-- Кнопка для перехода к странице заказов -->
-        <a href="/orders" class="btn btn-primary">Перейти к заказам</a>
+        <a href="/profile/orders" class="btn btn-primary">Перейти к заказам</a>
     </main>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
