--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -13,7 +13,7 @@
     <header>
         <!-- Навигация -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">Мой Магазин</a>
+            <a class="navbar-brand" href="/">Brand Attire Hub</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
